// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`check linkreducer > FLOWDESIGNER_LINK_ADD should add a new link to the state 1`] = `
{
  "childrens": {
    "id1": {
      "id2": "id2",
    },
    "id2": {},
    "id3": {},
  },
  "in": {
    "id2": {
      "id2": {
        "id2": "id2",
      },
    },
  },
  "links": {
    "id1": LinkRecord {
      "data": LinkData {
        "attr": "attr",
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {
          "attr": "attr",
        },
      },
      "id": "id1",
      "sourceId": "id1",
      "targetId": "id2",
    },
    "id2": LinkRecord {
      "data": LinkData {
        "properties": {},
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "sourceId": "id1",
      "targetId": "id2",
    },
  },
  "nodeTypes": {},
  "nodes": {
    "id1": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": {
    "id1": {
      "id1": {
        "id2": "id2",
      },
    },
  },
  "parents": {
    "id1": {},
    "id2": {
      "id1": "id1",
    },
    "id3": {},
  },
  "ports": {
    "id1": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "nodeId": "id1",
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "nodeId": "id2",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "nodeId": "id2",
    },
    "id4": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id4",
      "nodeId": "id1",
    },
    "id5": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id5",
      "nodeId": "id3",
    },
    "id6": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id6",
      "nodeId": "id3",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`check linkreducer > FLOWDESIGNER_LINK_ADD should add a new link to the state 2`] = `
{
  "childrens": {
    "id1": {
      "id2": "id2",
    },
    "id2": {
      "id3": "id3",
    },
    "id3": {},
  },
  "in": {
    "id2": {
      "id2": {
        "id2": "id2",
      },
    },
    "id3": {
      "id5": {
        "id3": "id3",
      },
    },
  },
  "links": {
    "id1": LinkRecord {
      "data": LinkData {
        "attr": "attr",
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {
          "attr": "attr",
        },
      },
      "id": "id1",
      "sourceId": "id1",
      "targetId": "id2",
    },
    "id2": LinkRecord {
      "data": LinkData {
        "properties": {},
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "sourceId": "id1",
      "targetId": "id2",
    },
    "id3": LinkRecord {
      "data": LinkData {
        "properties": {},
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "sourceId": "id3",
      "targetId": "id5",
    },
  },
  "nodeTypes": {},
  "nodes": {
    "id1": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": {
    "id1": {
      "id1": {
        "id2": "id2",
      },
    },
    "id2": {
      "id3": {
        "id3": "id3",
      },
    },
  },
  "parents": {
    "id1": {},
    "id2": {
      "id1": "id1",
    },
    "id3": {
      "id2": "id2",
    },
  },
  "ports": {
    "id1": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "nodeId": "id1",
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "nodeId": "id2",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "nodeId": "id2",
    },
    "id4": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id4",
      "nodeId": "id1",
    },
    "id5": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id5",
      "nodeId": "id3",
    },
    "id6": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id6",
      "nodeId": "id3",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`check linkreducer > FLOWDESIGNER_LINK_REMOVE should remove link from state 1`] = `
{
  "childrens": {
    "id1": {},
    "id2": {},
    "id3": {},
  },
  "in": {},
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "id1": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": {},
  "parents": {
    "id1": {},
    "id2": {},
    "id3": {},
  },
  "ports": {
    "id1": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "nodeId": "id1",
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "nodeId": "id2",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "nodeId": "id2",
    },
    "id4": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id4",
      "nodeId": "id1",
    },
    "id5": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id5",
      "nodeId": "id3",
    },
    "id6": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id6",
      "nodeId": "id3",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`check linkreducer > FLOWDESIGNER_LINK_REMOVE_DATA should remove 'attr'from data map 1`] = `
{
  "childrens": {
    "id1": {
      "id2": "id2",
    },
    "id2": {},
    "id3": {},
  },
  "in": {},
  "links": {
    "id1": LinkRecord {
      "data": LinkData {
        "attr": "attr",
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {
          "attr": "attr",
        },
      },
      "id": "id1",
      "sourceId": "id1",
      "targetId": "id2",
    },
  },
  "nodeTypes": {},
  "nodes": {
    "id1": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": {},
  "parents": {
    "id1": {},
    "id2": {
      "id1": "id1",
    },
    "id3": {},
  },
  "ports": {
    "id1": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "nodeId": "id1",
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "nodeId": "id2",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "nodeId": "id2",
    },
    "id4": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id4",
      "nodeId": "id1",
    },
    "id5": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id5",
      "nodeId": "id3",
    },
    "id6": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id6",
      "nodeId": "id3",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`check linkreducer > FLOWDESIGNER_LINK_REMOVE_GRAPHICAL_ATTRIBUTES should remove a specific attributes from attr map 1`] = `
{
  "childrens": {
    "id1": {
      "id2": "id2",
    },
    "id2": {},
    "id3": {},
  },
  "in": {},
  "links": {
    "id1": LinkRecord {
      "data": LinkData {
        "attr": "attr",
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "sourceId": "id1",
      "targetId": "id2",
    },
  },
  "nodeTypes": {},
  "nodes": {
    "id1": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": {},
  "parents": {
    "id1": {},
    "id2": {
      "id1": "id1",
    },
    "id3": {},
  },
  "ports": {
    "id1": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "nodeId": "id1",
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "nodeId": "id2",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "nodeId": "id2",
    },
    "id4": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id4",
      "nodeId": "id1",
    },
    "id5": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id5",
      "nodeId": "id3",
    },
    "id6": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id6",
      "nodeId": "id3",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`check linkreducer > FLOWDESIGNER_LINK_SET_DATA should add a data attribute type: 'test' from data map 1`] = `
{
  "childrens": {
    "id1": {
      "id2": "id2",
    },
    "id2": {},
    "id3": {},
  },
  "in": {},
  "links": {
    "id1": LinkRecord {
      "data": LinkData {
        "attr": "attr",
        "type": "test",
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {
          "attr": "attr",
        },
      },
      "id": "id1",
      "sourceId": "id1",
      "targetId": "id2",
    },
  },
  "nodeTypes": {},
  "nodes": {
    "id1": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": {},
  "parents": {
    "id1": {},
    "id2": {
      "id1": "id1",
    },
    "id3": {},
  },
  "ports": {
    "id1": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "nodeId": "id1",
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "nodeId": "id2",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "nodeId": "id2",
    },
    "id4": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id4",
      "nodeId": "id1",
    },
    "id5": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id5",
      "nodeId": "id3",
    },
    "id6": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id6",
      "nodeId": "id3",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`check linkreducer > FLOWDESIGNER_LINK_SET_GRAPHICAL_ATTRIBUTES should merge attributes within link attr property 1`] = `
{
  "childrens": {
    "id1": {
      "id2": "id2",
    },
    "id2": {},
    "id3": {},
  },
  "in": {},
  "links": {
    "id1": LinkRecord {
      "data": LinkData {
        "attr": "attr",
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {
          "attr": "attr",
          "selected": false,
        },
      },
      "id": "id1",
      "sourceId": "id1",
      "targetId": "id2",
    },
  },
  "nodeTypes": {},
  "nodes": {
    "id1": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": {},
  "parents": {
    "id1": {},
    "id2": {
      "id1": "id1",
    },
    "id3": {},
  },
  "ports": {
    "id1": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "nodeId": "id1",
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "nodeId": "id2",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "nodeId": "id2",
    },
    "id4": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id4",
      "nodeId": "id1",
    },
    "id5": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id5",
      "nodeId": "id3",
    },
    "id6": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id6",
      "nodeId": "id3",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`check linkreducer > FLOWDESIGNER_LINK_SET_SOURCE switch source to correct port if it exist 1`] = `
{
  "childrens": {
    "id1": {
      "id2": "id2",
    },
    "id2": {},
    "id3": {},
  },
  "in": {},
  "links": {
    "id1": LinkRecord {
      "data": LinkData {
        "attr": "attr",
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {
          "attr": "attr",
        },
      },
      "id": "id1",
      "sourceId": "id4",
      "targetId": "id2",
    },
  },
  "nodeTypes": {},
  "nodes": {
    "id1": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": {
    "id1": {
      "id4": {
        "id1": "id1",
      },
    },
  },
  "parents": {
    "id1": {},
    "id2": {
      "id1": "id1",
    },
    "id3": {},
  },
  "ports": {
    "id1": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "nodeId": "id1",
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "nodeId": "id2",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "nodeId": "id2",
    },
    "id4": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id4",
      "nodeId": "id1",
    },
    "id5": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id5",
      "nodeId": "id3",
    },
    "id6": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id6",
      "nodeId": "id3",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`check linkreducer > FLOWDESIGNER_LINK_SET_TARGET switch target to correct port if it exist 1`] = `
{
  "childrens": {
    "id1": {
      "id3": "id3",
    },
    "id2": {},
    "id3": {},
  },
  "in": {
    "id3": {
      "id5": {
        "id1": "id1",
      },
    },
  },
  "links": {
    "id1": LinkRecord {
      "data": LinkData {
        "attr": "attr",
      },
      "graphicalAttributes": LinkGraphicalAttributes {
        "properties": {
          "attr": "attr",
        },
      },
      "id": "id1",
      "sourceId": "id1",
      "targetId": "id5",
    },
  },
  "nodeTypes": {},
  "nodes": {
    "id1": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": NodeRecord {
      "data": NodeData {},
      "graphicalAttributes": NodeGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": {},
  "parents": {
    "id1": {},
    "id2": {
      "id1": "id1",
    },
    "id3": {},
  },
  "ports": {
    "id1": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id1",
      "nodeId": "id1",
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id2",
      "nodeId": "id2",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id3",
      "nodeId": "id2",
    },
    "id4": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id4",
      "nodeId": "id1",
    },
    "id5": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id5",
      "nodeId": "id3",
    },
    "id6": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "properties": {},
      },
      "id": "id6",
      "nodeId": "id3",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;
